--- a/index.htm
+++ b/index.htm
@@ -20,6 +20,8 @@
     </style>
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 
+    <link rel="canonical" href="http://neilrobbins.github.com/emacs_shortcuts/" />
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -58,7 +60,10 @@
         <div class="container-fluid">
           <a class="btn btn-navbar" data-toggle="collapse"
              data-target=".nav-collapse">
-            <span class="icon-bar"></span>
+      <!-- Place this tag where you want the +1 button to render. -->
+     <!-- <div class="g-plusone" data-annotation="inline" data-width="300"></div>-->
+
+            <span class="icon-bar"><g:plusone></g:plusone></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
@@ -149,7 +154,17 @@
         </div>
       </div><!--/span-->
       <footer>
-        <p>Shared with you by <a href="http://blog.semeosis.com">Neil Robbins</a>, but made for his benefit!</p>
+        <g:plusone></g:plusone>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://neilrobbins.github.com/emacs_shortcuts/"
+           data-text="Handy emacs shortcuts here"
+           data-hashtags="emacs">Tweet</a>
+        <div class="fb-like"
+             data-href="http://neilrobbins.github.com/emacs_shortcuts/"
+             data-send="false" data-layout="button_count"
+             data-width="450" data-show-faces="true">
+        </div>
+        <p>Shared with you by <a href="http://blog.semeosis.com">Neil
+        Robbins</a>, but made for his benefit!</p>
         <p>
           <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">
             <img alt="Creative Commons License" style="border-width:0"
@@ -162,6 +177,31 @@
       </footer>
 
     </div><!--/.fluid-container-->
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+
+    <!-- Place this tag after the last +1 button tag. -->
+    <script type="text/javascript">
+      window.___gcfg = {lang: 'en-GB'};
+      
+      (function() {
+      var po = document.createElement('script');
+      po.type = 'text/javascript';
+      po.async = true;
+      po.src = 'https://apis.google.com/js/plusone.js';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(po, s);
+      })();
+    </script>
+
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
     <!-- Le javascript
          ================================================== -->
