Added the LinkedIn share button.

--- a/index.htm
+++ b/index.htm
@@ -163,6 +163,11 @@
              data-send="false" data-layout="button_count"
              data-width="450" data-show-faces="true">
         </div>
+        <script src="//platform.linkedin.com/in.js"
+                type="text/javascript">
+        </script>
+        <script type="IN/Share" data-counter="right">
+        </script>
         <p>Shared with you by <a href="http://blog.semeosis.com">Neil
         Robbins</a>, but made for his benefit!</p>
         <p>
