--- a/index.htm
+++ b/index.htm
@@ -51,19 +51,17 @@
       s.parentNode.insertBefore(ga, s);
       })();
 
-</script>
+    </script>
+    <script src="http://platform.linkedin.com/in.js"
+            type="text/javascript">
+    </script>
   </head>
   <body data-spy="scroll" data-target=".es-sidebar">
-
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
           <a class="btn btn-navbar" data-toggle="collapse"
              data-target=".nav-collapse">
-      <!-- Place this tag where you want the +1 button to render. -->
-     <!-- <div class="g-plusone" data-annotation="inline" data-width="300"></div>-->
-
-            <span class="icon-bar"><g:plusone></g:plusone></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
@@ -154,20 +152,25 @@
         </div>
       </div><!--/span-->
       <footer>
-        <g:plusone></g:plusone>
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://neilrobbins.github.com/emacs_shortcuts/"
-           data-text="Handy emacs shortcuts here"
-           data-hashtags="emacs">Tweet</a>
-        <div class="fb-like"
-             data-href="http://neilrobbins.github.com/emacs_shortcuts/"
-             data-send="false" data-layout="button_count"
-             data-width="450" data-show-faces="true">
-        </div>
-        <script src="//platform.linkedin.com/in.js"
-                type="text/javascript">
-        </script>
-        <script type="IN/Share" data-counter="right">
-        </script>
+        <ul class="nav nav-pills">
+          <li><g:plusone></g:plusone></li>
+          <li>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://neilrobbins.github.com/emacs_shortcuts/"
+                 data-text="Handy emacs shortcuts here"
+                 data-hashtags="emacs">Tweet</a>
+          </li>
+          <li>
+            <div class="fb-like"
+                   data-href="http://neilrobbins.github.com/emacs_shortcuts/"
+                   data-send="false" data-layout="button_count"
+                   data-width="450" data-show-faces="true">
+            </div>
+          </li>
+          <li>
+            <script type="IN/Share" data-counter="right">
+            </script>
+          </li>
+        </ul>
         <p>Shared with you by <a href="http://blog.semeosis.com">Neil
         Robbins</a>, but made for his benefit!</p>
         <p>
