--- a/index.htm
+++ b/index.htm
@@ -77,7 +77,7 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span3 es-sidebar">
+        <div class="span2 es-sidebar">
           <ul class="nav nav-list bs-docs-sidenav">
             <li><a href="#file"><i class="icon-chevron-right"></i>File</a></li>
             <li><a href="#cursorMovement"><i class="icon-chevron-right"></i>Cursor Movement</a></li>
@@ -149,41 +149,44 @@
               <dd></dd>
             </dl>
           </section>
-        </div>
+        </div><!--/row-fluid-->
       </div><!--/span-->
       <footer>
-        <ul class="nav nav-pills">
-          <li><g:plusone></g:plusone></li>
-          <li>
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://neilrobbins.github.com/emacs_shortcuts/"
-                 data-text="Handy emacs shortcuts here"
-                 data-hashtags="emacs">Tweet</a>
-          </li>
-          <li>
-            <div class="fb-like"
-                   data-href="http://neilrobbins.github.com/emacs_shortcuts/"
-                   data-send="false" data-layout="button_count"
-                   data-width="450" data-show-faces="true">
-            </div>
-          </li>
-          <li>
-            <script type="IN/Share" data-counter="right">
-            </script>
-          </li>
-        </ul>
-        <p>Shared with you by <a href="http://blog.semeosis.com">Neil
-        Robbins</a>, but made for his benefit!</p>
-        <p>
-          <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">
-            <img alt="Creative Commons License" style="border-width:0"
-            src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png"/>
-          </a>
-          Licensed under a <a rel="license"
-          href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative
-          Commons Attribution-ShareAlike 3.0 Unported License</a>.
-        </p>
+        <br/>
+        <div class="row-fluid">
+        <div class="span1">
+          <g:plusone></g:plusone>
+        </div>
+        <div class="span1">
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://neilrobbins.github.com/emacs_shortcuts/"
+             data-text="Handy emacs shortcuts here"
+             data-hashtags="emacs">Tweet</a>
+        </div>
+        <div class="fb-like span1"
+             data-href="http://neilrobbins.github.com/emacs_shortcuts/"
+             data-send="false" data-layout="button_count"
+             data-width="450" data-show-faces="true">
+        </div>
+        <div class="span1">
+          <script type="IN/Share" data-counter="right">
+          </script>
+        </div>
+        </div> <!--/.row-fluid-->
+        <div>
+          <br/>
+          <p>Shared with you by <a href="http://blog.semeosis.com">Neil
+              Robbins</a>, but made for his benefit!</p>
+          <p>
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">
+              <img alt="Creative Commons License" style="border-width:0"
+                   src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png"/>
+            </a>
+            Licensed under a <a rel="license"
+                                href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative
+              Commons Attribution-ShareAlike 3.0 Unported License</a>.
+          </p>
+        </div>
       </footer>
-
     </div><!--/.fluid-container-->
 
     <div id="fb-root"></div>
