Yet more fixing up the share buttons - a lot more fixing needed, but manyana.

--- a/index.htm
+++ b/index.htm
@@ -154,20 +154,20 @@
       <footer>
         <br/>
         <div class="row-fluid">
-        <div class="span1">
+        <div>
           <g:plusone></g:plusone>
         </div>
-        <div class="span1">
+        <div>
           <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://neilrobbins.github.com/emacs_shortcuts/"
              data-text="Handy emacs shortcuts here"
              data-hashtags="emacs">Tweet</a>
         </div>
-        <div class="fb-like span1"
+        <div class="fb-like"
              data-href="http://neilrobbins.github.com/emacs_shortcuts/"
              data-send="false" data-layout="button_count"
              data-width="450" data-show-faces="true">
         </div>
-        <div class="span1">
+        <div>
           <script type="IN/Share" data-counter="right">
           </script>
         </div>
