--- a/index.htm
+++ b/index.htm
@@ -55,142 +55,284 @@
     <script src="http://platform.linkedin.com/in.js"
             type="text/javascript">
     </script>
+<style>
+  .bs-docs-sidenav {
+  width: 228px;
+  margin: 30px 0 0;
+  padding: 0;
+  background-color: #fff;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
+  -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
+  box-shadow: 0 1px 4px rgba(0,0,0,.065);
+  }
+  .bs-docs-sidenav > li > a {
+  display: block;
+  *width: 190px;
+  margin: 0 0 -1px;
+  padding: 8px 14px;
+  border: 1px solid #e5e5e5;
+  }
+  .bs-docs-sidenav > li:first-child > a {
+  -webkit-border-radius: 6px 6px 0 0;
+  -moz-border-radius: 6px 6px 0 0;
+  border-radius: 6px 6px 0 0;
+  }
+  .bs-docs-sidenav > li:last-child > a {
+  -webkit-border-radius: 0 0 6px 6px;
+  -moz-border-radius: 0 0 6px 6px;
+  border-radius: 0 0 6px 6px;
+  }
+  .bs-docs-sidenav > .active > a {
+  position: relative;
+  z-index: 2;
+  padding: 9px 15px;
+  border: 0;
+  text-shadow: 0 1px 0 rgba(0,0,0,.15);
+  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0
+  rgba(0,0,0,.1);
+  -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0
+  rgba(0,0,0,.1);
+  box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0
+  rgba(0,0,0,.1);
+  }
+  /* Chevrons */
+  .bs-docs-sidenav .icon-chevron-right {
+  float: right;
+  margin-top: 2px;
+  margin-right: -6px;
+  opacity: .25;
+  }
+  .bs-docs-sidenav > li > a:hover {
+  background-color: #f5f5f5;
+  }
+  .bs-docs-sidenav a:hover .icon-chevron-right {
+  opacity: .5;
+  }
+  .bs-docs-sidenav .active .icon-chevron-right,
+  .bs-docs-sidenav .active a:hover .icon-chevron-right {
+  background-image: url(/assets/img/glyphicons-halflings-white.png);
+  opacity: 1;
+  }
+  .bs-docs-sidenav.affix {
+  top: 40px;
+  }
+  .bs-docs-sidenav.affix-bottom {
+  position: absolute;
+  top: auto;
+  bottom: 270px;
+  }
+
+/* Desktop large
+------------------------- */
+  @media (min-width: 1200px) {
+  .bs-docs-sidenav {
+  width: 258px;
+  }
+  }
+
+@media (max-width: 980px) {
+  /* When affixed, space properly */
+  .bs-docs-sidenav {
+    top: 0;
+    margin-top: 30px;
+    margin-right: 0;
+  }
+}
+
+/* Tablet to desktop
+------------------------- */
+@media (min-width: 768px) and (max-width: 980px) {
+  /* Adjust sidenav width */
+  .bs-docs-sidenav {
+    width: 166px;
+    margin-top: 20px;
+  }
+  .bs-docs-sidenav.affix {
+    top: 0;
+  }
+}
+
+/* Tablet
+------------------------- */
+@media (max-width: 768px) {
+
+  /* Sidenav */
+  .bs-docs-sidenav {
+    width: auto;
+    margin-bottom: 20px;
+  }
+  .bs-docs-sidenav.affix {
+    position: static;
+    width: auto;
+    top: 0;
+  }
+}
+
+
+</style>
   </head>
   <body data-spy="scroll" data-target=".es-sidebar">
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse"
-             data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
           <a class="brand" href="#">Emacs Shortcuts</a>
           <ul class="nav">
             <li class="active"><a href="#">Common</a></li>
             <li><a href="modes/SML_Mode">SML Mode</a></li>
+            <li><a href="modes/HTML_Mode">HTML Mode</a></li>
             <li><a href="about.htm">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
-
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span2 es-sidebar">
-          <ul class="nav nav-list bs-docs-sidenav">
-            <li><a href="#file"><i class="icon-chevron-right"></i>File</a></li>
-            <li><a href="#cursorMovement"><i class="icon-chevron-right"></i>Cursor Movement</a></li>
-            <li><a href="#window"><i class="icon-chevron-right"></i>Window</a></li>
-            <li><a href="#registers"><i class="icon-chevron-right"></i>Registers</a></li>
-            <li><a href="#edit"><i class="icon-chevron-right"></i>Edit</a></li>
-          </ul>
-        </div>
-        <div class="span4 well">
-          <section id="file">
-            <h2>File</h2>
-            <dl class="dl-horizontal">
-              <dt>Open</dt>
-              <dd>Ctrl-X, Ctrl-F</dd>
-              <dt>Save</dt>
-              <dd>Ctrl-X, Ctrl-S</dd>
-              <dt>Save As</dt>
-              <dd>Ctrl-X, Ctrl-W</dd>
-            </dl>
-          </section>
-        </div>
-        <div class="span4 well">
-          <section id="cursorMovement">
-            <h2>Cursor Movement</h2>
-            <dl class="dl-horizontal">
-              <dt>Word Forward</dt>
-              <dd>Meta-F</dd>
-              <dt>Word Backward</dt>
-              <dd>Meta-B</dd>
-              <dt>Line Forward</dt>
-              <dd>Ctrl-A</dd>
-              <dt>Line Backward</dt>
-              <dd>Ctrl-E</dd>
-            </dl>
-          </section>
-        </div>
-        <div class="span4 well">
-          <section id="window">
-            <h2>Window</h2>
-              <dl class="dl-horizontal">
-                <dt>Close</dt>
-                <dd>Ctrl-X, K</dd>
-                <dt>Next Window</dt>
-                <dd>Ctrl-X, B</dd>
-                <dt>Choose Window</dt>
-                <dd>Ctrl-X, Ctrl-B</dd>
-                <dt>Maximise</dt>
-                <dd>Ctrl-X, 1</dd>
-                <dt>Split Horizontal</dt>
-                <dd>Ctrl-X, 2</dd>
-                <dt>Split Vertical</dt>
-                <dd>Ctrl-X, 3</dd>
-                <dt>Switch Focus</dt>
-                <dd>Ctrl X, 0</dd>
-              </dl>
-          </section>
-        </div>
-        <div class="span4 well">
-          <section id="registers">
-            <h2>Registers</h2>
-            <dl class="dl-horizontal">
-              <dt>Copy selection to numbered register</dt>
-              <dd>Ctrl-X R S <i>#register</i></dd>
-              <dt>Paste from numbered register</dt>
-              <dd>Ctrl-X R I <i>#register</i></dd>
-              <dt></dt>
-              <dd></dd>
-              <dt></dt>
-              <dd></dd>
-            </dl>
-          </section>
+      <div class="container">
+        <div class="row">
+          <div class="span3 es-sidebar">
+            <ul class="nav nav-list bs-docs-sidenav">
+              <li><a href="#file"><i class="icon-chevron-right"></i> File</a></li>
+              <li><a href="#cursorMovement"><i class="icon-chevron-right"></i>
+                  Cursor Movement</a></li>
+              <li><a href="#window"><i class="icon-chevron-right"></i> Window</a></li>
+              <li><a href="#registers"><i class="icon-chevron-right"></i>
+                  Registers</a></li>
+              <li><a href="#edit"><i class="icon-chevron-right"></i> Edit</a></li>
+            </ul>
+          </div>
+          <div class="span8">
+            <section id="file">
+              <div class="well">
+              <h2>File</h2>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Command Description</th>
+                    <th>Key Sequence</th>
+                  </tr>
+                  <tbody>
+                    <tr><td>Open</td><td>Ctrl-x, Ctrl-f</td></tr>
+                    <tr><td>Save</td><td>Ctrk-x, Ctrl-s</td></tr>
+                    <tr><td>Save As</td><td>Ctrl-x, Ctrl-w</td></tr>
+                  </tbody>
+                </thead>
+              </table>
+              </div>
+            </section>
+            <section id="cursorMovement">
+              <div class="well">
+              <h2>Cursor Movement</h2>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Distance</th>
+                    <th>Direction</th>
+                    <th>Key Sequence</th>
+                  </tr>
+                  <tbody>
+                    <tr><td rowspan="2">Word</td><td>Forward</td><td>Meta-f</td></tr>
+                    <tr><td>Backward</td><td>Meta-b</td></tr>
+                    <tr><td rowspan="2">Line</td><td>Start</td><td>Ctrl-a</td></tr>
+                    <tr><td>End</td><td>Ctrl-e</td></tr>
+                    <tr><td rowspan="2">Paragraph</td><td>Forward</td><td>Meta-{</td></tr>
+                    <tr><td>Backward</td><td>Meta-}</td></tr>
+                    <tr><td rowspan="2">Page</td><td>Forward</td><td>Ctrl-V</td></tr>
+                    <tr><td>Backward</td><td>Meta-V</td></tr>
+                  </tbody>
+                </thead>
+              </table>
+              </div>
+            </section>
+            <section id="window">
+              <div class="well">
+              <h2>Windows &amp; Buffers</h2>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Command Description</th>
+                    <th>Key Sequence</th>
+                  </tr>
+                  <tbody>
+                    <tr><td>Close</td><td>Ctrl-x, k</td></tr>
+                    <tr><td>Offer each buffer in turn to be closed</td><td>Meta-x kill-some-buffers</td></tr>
+                    <tr><td>Select buffer</td><td>Ctrl-x, b <i>name</i></td></tr>
+                    <tr><td>Move to next buffer</td><td>Ctrl-x, o</td></tr>
+                    <tr><td>Vertically split window &amp; select from buffers</td><td>Ctrl-x, Ctrl-b</td>
+                    <tr><td>Maximise window</td><td>Ctrl-x, 1</td></tr>
+                    <tr><td>Split window horizontally</td><td>Ctrl-x, 2</td></tr>
+                    <tr><td>Split window vertically</td><td>Ctrl-x, 3</td></tr>
+                    <tr><td>List available buffers for
+                        selection</td><td>Ctrl-x, Ctrl-b</td></tr>
+                    <tr><td>Insert text from buffer</td><td>Meta-x insert-buffer</td></tr>
+                  </tbody>
+                </thead>
+              </table>
+              </div>
+            </section>
+            <section id="registers">
+              <div class="well">
+              <h2>Registers</h2>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Command Description</th>
+                    <th>Key Sequence</th>
+                  </tr>
+                  <tbody>
+                    <tr><td>Copy selection to register</td><td>Ctrl-x r s <i>#register number</i></td></tr>
+                    <tr><td>Copy selection from
+                        register</td><td>Ctrl-x r i <i>#register number</i></td></tr>
+                  </tbody>
+                </thead>
+              </table>
+              </div>
+            </section>
+          </div><!--span-->
         </div><!--/row-fluid-->
-      </div><!--/span-->
+      </div><!--/.fluid-container-->
       <footer>
-        <br/>
-        <div class="row-fluid">
-        <div>
-          <g:plusone></g:plusone>
-        </div>
-        <div>
-          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://neilrobbins.github.com/emacs_shortcuts/"
-             data-text="Handy emacs shortcuts here"
-             data-hashtags="emacs">Tweet</a>
-        </div>
-        <div class="fb-like"
-             data-href="http://neilrobbins.github.com/emacs_shortcuts/"
-             data-send="false" data-layout="button_count"
-             data-width="450" data-show-faces="true">
-        </div>
-        <div>
-          <script type="IN/Share" data-counter="right">
-          </script>
-        </div>
-        </div> <!--/.row-fluid-->
-        <div>
+        <div class="container">
           <br/>
-          <p>Shared with you by <a href="http://blog.semeosis.com">Neil
-              Robbins</a>, but made for his benefit!</p>
-          <p>
-            <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">
-              <img alt="Creative Commons License" style="border-width:0"
-                   src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png"/>
-            </a>
-            Licensed under a <a rel="license"
-                                href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative
-              Commons Attribution-ShareAlike 3.0 Unported License</a>.
-          </p>
+          <div class="row">
+            <div class="span1">
+              <g:plusone></g:plusone>
+            </div>
+            <div class="span1">
+              <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://neilrobbins.github.com/emacs_shortcuts/"
+                 data-text="Handy emacs shortcuts here"
+                 data-hashtags="emacs">Tweet</a>
+            </div>
+            <div class="fb-like span1"
+                 data-href="http://neilrobbins.github.com/emacs_shortcuts/"
+                 data-send="false" data-layout="button_count"
+                 data-width="450" data-show-faces="true">
+            </div>
+            <div class="span1">
+              <script type="IN/Share" data-counter="right">
+              </script>
+            </div>
+          </div> <!--/.row-fluid-->
+          <div class="span12">
+            <br/>
+            <p>Shared with you by <a href="http://blog.semeosis.com">Neil
+                Robbins</a>, with an obviously large lump
+                of <a href="http://twitter.github.com/bootstrap/index.html">Twitter Bootstrap</a>.</p>
+            <p>
+              <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">
+                <img alt="Creative Commons License" style="border-width:0"
+                     src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png"/>
+              </a>
+              Licensed under a <a rel="license"
+                                  href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative
+                Commons Attribution-ShareAlike 3.0 Unported License</a>.
+            </p>
+          </div>
         </div>
       </footer>
-    </div><!--/.fluid-container-->
 
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
+      <div id="fb-root"></div>
+      <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
