--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
       }
     </style>
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-
+    <link href="assets/css/docs.css" rel="stylesheet">
     <link rel="canonical" href="http://neilrobbins.github.com/emacs_shortcuts/" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
