Stripped out a lot of the docs.css content to try and minimise it to only those bits being used. Also stripped out some of the unused js linked to.

--- a/index.htm
+++ b/index.htm
@@ -74,7 +74,7 @@
         <div class="row">
           <div class="span3 bs-docs-sidebar">
             <ul class="nav nav-list bs-docs-sidenav">
-              <li><a href="#file"><i class="icon-chevron-right"></i> File</a></li>
+              <li class="active"><a href="#file"><i class="icon-chevron-right"></i> File</a></li>
               <li><a href="#cursorMovement"><i class="icon-chevron-right"></i>
                   Cursor Movement</a></li>
               <li><a href="#window"><i class="icon-chevron-right"></i> Window</a></li>
