--- a/index.htm
+++ b/index.htm
@@ -121,6 +121,9 @@
                     <tr><td>Backward</td><td>Meta-}</td></tr>
                     <tr><td rowspan="2">Page</td><td>Forward</td><td>Ctrl-V</td></tr>
                     <tr><td>Backward</td><td>Meta-V</td></tr>
+                    <tr><td rowspan="2">Whole Buffer</td><td>Start</td><td>Meta-&lt;</td></tr>
+                    <tr><td>End</td><td>Meta-&gt;</td></tr>
+                    <tr><td>Go to line</td><td>N/A</td><td>Meta-g, g</td></tr>
                   </tbody>
                 </thead>
               </table>
@@ -138,7 +141,7 @@
                   <tbody>
                     <tr><td>Close</td><td>Ctrl-x, k</td></tr>
                     <tr><td>Offer each buffer in turn to be closed</td><td>Meta-x kill-some-buffers</td></tr>
-                    <tr><td>Select buffer</td><td>Ctrl-x, b <i>name</i></td></tr>
+                    <tr><td>Select buffer</td><td>Ctrl-x, b <i>buffer_name</i></td></tr>
                     <tr><td>Move to next buffer</td><td>Ctrl-x, o</td></tr>
                     <tr><td>Vertically split window &amp; select from buffers</td><td>Ctrl-x, Ctrl-b</td>
                     <tr><td>Maximise window</td><td>Ctrl-x, 1</td></tr>
@@ -162,12 +165,42 @@
                     <th>Key Sequence</th>
                   </tr>
                   <tbody>
-                    <tr><td>Copy selection to register</td><td>Ctrl-x r s <i>#register number</i></td></tr>
+                    <tr><td>Copy selection to register</td><td>Ctrl-x r s <i>#register_number</i></td></tr>
                     <tr><td>Copy selection from
-                        register</td><td>Ctrl-x r i <i>#register number</i></td></tr>
+                        register</td><td>Ctrl-x r i <i>#register_number</i></td></tr>
                   </tbody>
                 </thead>
               </table>
+              </div>
+            </section>
+            <section id="edit">
+              <div class="well">
+                <h2>Edit</h2>
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th>Command Description</th>
+                      <th>Key Sequence</th>
+                    </tr>
+                    <tbody>
+                      <tr><td>Undo</td><td>Ctrl-x, u</td></tr>
+                      <tr><td>Begin Selection</td><td>Ctrl-Space</td></tr>
+                      <tr><td>Cancel Selection</td><td>Ctrl-g</td></tr>
+                      <tr><td>Cut Selection</td><td>Ctrl-w</td></tr>
+                      <tr><td>Cut Line</td><td>Ctrl-k</td></tr>
+                      <tr><td>Paste (Yank)</td><td>Ctrl-y</td></tr>                      
+                      <tr><td>Copy selection to
+                      register</td><td>Ctrl-x, r, s, <i>#register_number</i></td></tr>
+                      <tr><td>Paste (insert) from
+                      register</td><td>Ctrl-x, r, i, <i>#register_number</i></td></tr>
+                      <tr><td>Delete (forward delete)</td><td>Ctrl-d</td></tr>
+                      <tr><td>Delete Current or Previous Word</td><td>Meta-BackSpace</td></tr>
+                      <tr><td>Delete Current or Next
+                      Word</td><td>Meta-d</td></tr>
+                      <tr><td>Search and Replace</td><td>Meta-%</td></tr>
+                    </tbody>
+                  </thead>
+                </table>
               </div>
             </section>
           </div><!--span-->
