--- a/index.htm
+++ b/index.htm
@@ -28,15 +28,7 @@
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="/assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144"
-          href="assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114"
-          href="assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72"
-          href="assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed"
-          href="assets/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="assets/ico/favicon.ico">
     <script type="text/javascript">
       
       var _gaq = _gaq || [];
@@ -63,8 +55,8 @@
           <a class="brand" href="#">Emacs Shortcuts</a>
           <ul class="nav">
             <li class="active"><a href="#">Common</a></li>
-            <li><a href="modes/SML_Mode">SML Mode</a></li>
-            <li><a href="modes/HTML_Mode">HTML Mode</a></li>
+            <li><a href="modes/SML_Mode.htm">SML Mode</a></li>
+            <li><a href="modes/HTML_Mode.htm">HTML Mode</a></li>
             <li><a href="about.htm">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
