Added an about page.

--- a/index.htm
+++ b/index.htm
@@ -52,11 +52,11 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="#">Emacs Shortcuts</a>
+          <a class="brand" href="about.htm">Emacs Shortcuts</a>
           <ul class="nav">
             <li class="active"><a href="#">Common</a></li>
-            <li><a href="modes/SML_Mode.htm">SML Mode</a></li>
-            <li><a href="modes/HTML_Mode.htm">HTML Mode</a></li>
+            <li><a href="modes/sml_mode.htm">SML Mode</a></li>
+            <li><a href="modes/html_mode.htm">HTML Mode</a></li>
             <li><a href="about.htm">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
