--- a/modes/sml_mode.htm
+++ b/modes/sml_mode.htm
@@ -56,9 +56,9 @@
           <a class="brand" href="#">Emacs Shortcuts</a>
           <ul class="nav">
             <li><a href="../index.htm">Common</a></li>
-            <li class="active"><a href="modes/SML_Mode">SML Mode</a></li>
-            <li><a href="modes/HTML_Mode">HTML Mode</a></li>
-            <li><a href="about.htm">About</a></li>
+            <li class="active"><a href="modes/sml_mode.htm">SML Mode</a></li>
+            <li><a href="html_mode.htm">HTML Mode</a></li>
+            <li><a href="../about.htm">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
