Correcting a spelling and a link

--- a/modes/sml_mode.htm
+++ b/modes/sml_mode.htm
@@ -56,7 +56,7 @@
           <a class="brand" href="#">Emacs Shortcuts</a>
           <ul class="nav">
             <li><a href="../index.htm">Common</a></li>
-            <li class="active"><a href="modes/sml_mode.htm">SML Mode</a></li>
+            <li class="active"><a href="#">SML Mode</a></li>
             <li><a href="html_mode.htm">HTML Mode</a></li>
             <li><a href="../about.htm">About</a></li>
           </ul>
@@ -97,7 +97,7 @@
                       <tr><td>Compile</td><td>Ctrl-c, Ctrl-c</td></tr>
                       <tr><td>Send region to SML REPL</td><td>Ctrl-c, Ctrl-r</td></tr>
                       <tr><td>Insert a 'match' expression</td><td>Meta-|</td></tr>
-                      <tr><td>Cylce through reported compilation errors</td><td>Ctrl-x, `</td></tr>
+                      <tr><td>Cycle through reported compilation errors</td><td>Ctrl-x, `</td></tr>
                     </tbody>
                   </thead>
                 </table>
